# 3D-reordering

./: README.md  pyproject.toml  run_ct.sh
configs/CT/: ct_convS5_novq.yaml  ct_convS5_novq_slice.yaml
configs/Moving-MNIST/300_train_len/: mnist_BTST_novq.yaml  mnist_BTST_novq_eval.yaml  mnist_BTST_novq_small.yaml  mnist_BTST_novq_validate.yaml  mnist_convS5_novq.yaml  mnist_convS5_novq_eval.yaml  mnist_convS5_novq_small.yaml  mnist_convS5_novq_validate.yaml
configs/Moving-MNIST/600_train_len/: mnist_BTST_novq.yaml  mnist_BTST_novq_eval.yaml  mnist_BTST_novq_validate.yaml  mnist_convS5_novq.yaml  mnist_convS5_novq_eval.yaml  mnist_convS5_novq_validate.yaml
scripts/: train.py  validate.py
src/: data.py  train_utils.py
src/models/: __init__.py  base.py
src/models/BTST/: diagonal_scans.py  diagonal_ssm.py
src/models/S5/: diagonal_ssm.py
src/models/convS5/: diagonal_ssm.py
src/models/sampling/: sample_convSSM_noVQ.py  sample_transformer_noVQ.py
src/models/sequence_models/VQ/: btst.py  teco_btst.py
src/models/sequence_models/noVQ/: btst.py  convS5.py
